ajout de la partie aside

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,64 @@
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <title>Youtube</title>
 </head>
+
 <body>
-  <nav>
-    
-  </nav>
+  <nav></nav>
   <header></header>
-  <aside></aside>
+  <aside>
+    <ul>
+      <ul>
+        <li>Acceuil</li>
+        <li>Shorts</li>
+        <li>Abonnements</li>
+      </ul>
+      <ul>
+        <li>Bibliothèque</li>
+        <li>Historique</li>
+        <li>Vos vidéos</li>
+        <li>À regarder plus tard</li>
+        <li>Vidéos "J'aime"</li>
+      </ul>
+      <ul class="Abonnements">
+        <li>BFMtv</li>
+        <li>CoffeChess</li>
+        <li>Dude Perfect</li>
+        <li>Lofi Girl</li>
+        <li>Pewdipie</li>
+      </ul>
+      <ul class="Explorer">
+        <li>Tendances</li>
+        <li>Musique</li>
+        <li>Films et TV</li>
+        <li>Direct</li>
+        <li>Jeux vidéos</li>
+        <li>Actualités</li>
+        <li>Sport</li>
+        <li>Savoirs & Cultures</li>
+        <li>Mode et beauté</li>
+      </ul>
+      <ul class="Autres">
+        <li>Youtube Premium</li>
+        <li>Youtube Studio</li>
+        <li>Youtube Music</li>
+        <li>Youtube Kids</li>
+      </ul>
+      <ul>
+        <li>Paramètres</li>
+        <li>Historique des signalements</li>
+        <li>Aide</li>
+        <li>Envoyer des commentaires</li>
+      </ul>
+      <ul>
+        <li>2023 Google LLC</li>
+      </ul>
+    </ul>
+  </aside>
   <main>
     <section></section>
     <section></section>
     <section></section>
   </main>
 </body>
+
 </html>
