--- a/index.html
+++ b/index.html
@@ -1,22 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-  <title>Youtube</title>
-</head>
-<body>
-  <nav>
-    
-  </nav>
-  <header></header>
-  <aside></aside>
-  <main>
-    <section></section>
-    <section></section>
-    <section></section>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link
+      rel="shortcut icon"
+      href="https://www.youtube.com/s/desktop/339bae71/img/favicon.ico"
+      type="image/x-icon" />
+    <title>Youtube</title>
+  </head>
+  <body>
+    <nav></nav>
+    <header></header>
+    <aside></aside>
+    <main>
+      <section class="topvideos"></section>
+      <section class="shorts">
+        <div class="sectionTitle">
+          <div class="titleIcon">
+            <svg
+              viewBox="0 0 24 24"
+              preserveAspectRatio="xMidYMid meet"
+              focusable="false"
+              class="style-scope yt-icon"
+              style="
+                pointer-events: none;
+                display: block;
+                width: 100%;
+                height: 100%;
+              ">
+              <g
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                class="style-scope yt-icon">
+                <g class="style-scope yt-icon">
+                  <path
+                  d="M17.77,10.32l-1.2-.5L18,9.06a3.74,3.74,0,0,0-3.5-6.62L6,6.94a3.74,3.74,0,0,0,.23,6.74l1.2.49L6,14.93a3.75,3.75,0,0,0,3.5,6.63l8.5-4.5a3.74,3.74,0,0,0-.23-6.74Z"
+                  fill="red"
+                  class="style-scope yt-icon"></path>
+                  <polygon
+                  points="10 14.65 15 12 10 9.35 10 14.65"
+                  fill="#fff"
+                  class="style-scope yt-icon"></polygon>
+                </g>
+              </g>
+            </svg>
+            <h2>Shorts</h2>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="tendances">
+          <h2>Tendance</h2>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+          <div class="videoCard">
+            <div class"spoiler">
+              <image class="extrait"/>
+              <div class="timer">
+
+              </div>
+              <p class="filmTitle"></p>
+              <p class"author"></p>
+              <p class"vue"></p>
+            </div>
+          </div>
+      </section>
+    </main>
+  </body>
 </html>
