Added nav section

--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-  <title>Youtube</title>
-</head>
-<body>
-  <nav>
-    
-  </nav>
-  <header></header>
-  <aside></aside>
-  <main>
-    <section></section>
-    <section></section>
-    <section></section>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Youtube Clone</title>
+  </head>
+  <body>
+    <nav>
+      <div class="logo">
+        <a href="#">YouTube</a>
+      </div>
+      <div class="search-bar">
+        <input type="text" placeholder="Search" />
+        <button type="submit">Search</button>
+      </div>
+      <div class="menu-items">
+        <a href="#">Home</a>
+        <a href="#">Trending</a>
+        <a href="#">Subscriptions</a>
+        <a href="#">Library</a>
+        <a href="#">History</a>
+      </div>
+    </nav>
+    <header></header>
+    <aside></aside>
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+  </body>
 </html>
