--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <header>
   <nav>
     <div class="topBar">
       <div class="logo">
@@ -90,57 +91,57 @@
       <a href="#">History</a>
     </div>
   </nav>
-  <header></header>
+  </header>
+  <aside>
+    <ul class="general">
+      <li>Acceuil</li>
+      <li>Shorts</li>
+      <li>Abonnements</li>
+    </ul>
+    <ul class="general2">
+      <li>Bibliothèque</li>
+      <li>Historique</li>
+      <li>Vos vidéos</li>
+      <li>À regarder plus tard</li>
+      <li>Vidéos "J'aime"</li>
+    </ul>
+    <ul class="Abonnements">
+      <li>BFMtv</li>
+      <li>CoffeChess</li>
+      <li>Dude Perfect</li>
+      <li>Lofi Girl</li>
+      <li>Pewdipie</li>
+    </ul>
+    <ul class="Explorer">
+      <li>Tendances</li>
+      <li>Musique</li>
+      <li>Films et TV</li>
+      <li>Direct</li>
+      <li>Jeux vidéos</li>
+      <li>Actualités</li>
+      <li>Sport</li>
+      <li>Savoirs & Cultures</li>
+      <li>Mode et beauté</li>
+    </ul>
+    <ul class="Autres">
+      <li>Youtube Premium</li>
+      <li>Youtube Studio</li>
+      <li>Youtube Music</li>
+      <li>Youtube Kids</li>
+    </ul>
+    <ul class="Autres2">
+      <li>Paramètres</li>
+      <li>Historique des signalements</li>
+      <li>Aide</li>
+      <li>Envoyer des commentaires</li>
+    </ul>
+    <ul>
+      <li>2023 Google LLC</li>
+    </ul>
+  </aside>
+  
   <main>
-    <aside>
-      <ul class="general">
-        <li>Acceuil</li>
-        <li>Shorts</li>
-        <li>Abonnements</li>
-      </ul>
-      <ul class="general2">
-        <li>Bibliothèque</li>
-        <li>Historique</li>
-        <li>Vos vidéos</li>
-        <li>À regarder plus tard</li>
-        <li>Vidéos "J'aime"</li>
-      </ul>
-      <ul class="Abonnements">
-        <li>BFMtv</li>
-        <li>CoffeChess</li>
-        <li>Dude Perfect</li>
-        <li>Lofi Girl</li>
-        <li>Pewdipie</li>
-      </ul>
-      <ul class="Explorer">
-        <li>Tendances</li>
-        <li>Musique</li>
-        <li>Films et TV</li>
-        <li>Direct</li>
-        <li>Jeux vidéos</li>
-        <li>Actualités</li>
-        <li>Sport</li>
-        <li>Savoirs & Cultures</li>
-        <li>Mode et beauté</li>
-      </ul>
-      <ul class="Autres">
-        <li>Youtube Premium</li>
-        <li>Youtube Studio</li>
-        <li>Youtube Music</li>
-        <li>Youtube Kids</li>
-      </ul>
-      <ul class="Autres2">
-        <li>Paramètres</li>
-        <li>Historique des signalements</li>
-        <li>Aide</li>
-        <li>Envoyer des commentaires</li>
-      </ul>
-      <ul>
-        <li>2023 Google LLC</li>
-      </ul>
-    </aside>
     <div class="contener">
-      <section class="topvideos"></section>
       <section class="shorts">
         <div class="sectionTitle">
           <div class="titleIcon">
@@ -167,6 +168,14 @@
           <div class"spoiler">
             <image class="extrait" />
             <div class="timer">
+
+              <div class="topVideos">
+              <section>
+                <article>
+                  <img src="images/videoBanner.jpg" alt="">
+                  <p>Video Title 1</p>
+                </article>
+              </section>
 
         <section>
           <article>
@@ -202,6 +211,7 @@
             <p>Video Title 6</p>
           </article>
         </section>
+      </div>
 
       </div>
     </main>
